[package]
name = "tpl"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtmpl = "0.7.1"
structopt = "0.3.25"
serde_any = { version = "0.5.0", default-features = false, features = ["yaml", "json"] }
gtmpl_value = { version = "0.5.1", features = ["serde"] }

[patch.crates-io]
gtmpl_value = { git = "https://github.com/Gottox/gtmpl_value.git", branch = "feature/add-serde" }
